bug bunch of IE fixes and autoZoomage and slider jumps no more.

--- a/public/stylesheets/DV/components/ui-menu.css
+++ b/public/stylesheets/DV/components/ui-menu.css
@@ -2,7 +2,7 @@
   background-color:#f0f4f5;
   height:37px;
   border-bottom:1px solid #ABABAB;
-  border-top:1px solid #ABABAB; 
+  border-top:1px solid #ABABAB;
   margin-top:10px;
   position:relative;
 }
@@ -31,7 +31,7 @@
 
 .DV-views div span{
   display:block;
-  padding:8px 14px; 
+  padding:8px 14px;
   background-color:#f4f4f4;
   border:1px solid #ababab;
   font-family:Arial,Helvetica,sans-serif;
@@ -41,7 +41,7 @@
   border-left:none;
   border-bottom:1px solid #ababab;
   text-transform:uppercase;
-  color:#666;  
+  color:#666;
 }
 
 .DV-ie6 .DV-views div span{
@@ -50,7 +50,7 @@
 }
 
 .DV-views div.DV-first span{
-  border-left:1px solid #ababab;  
+  border-left:1px solid #ababab;
 }
 
 .DV-views div span:hover,
@@ -71,14 +71,6 @@
 .DV-viewAnnotations .DV-views #DV-annotationView span,
 .DV-viewText .DV-views #DV-textView span,
 .DV-viewSearch .DV-views #DV-textView span{
-  border-bottom:1px solid #fff;  
+  border-bottom:1px solid #fff;
   font-weight:bold;
-}
-
-
-.DV-ie6.DV-viewDocument .DV-views #DV-documentView span,
-.DV-ie6.DV-viewAnnotations .DV-views #DV-annotationView span,
-.DV-ie6.DV-viewText .DV-views #DV-textView span,
-.DV-ie6.DV-viewSearch .DV-views #DV-textView span{
-  padding-bottom:8px;  
 }
